@@ -10,7 +10,7 @@ PKG_IS_ADDON="yes"
 PKG_ADDON_NAME="Transmission"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_MAINTAINER="thoradia"
-PKG_REV="11"
+PKG_REV="12"
 PKG_SHORTDESC="$PKG_ADDON_NAME: a fast, easy and free BitTorrent client"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) is a fast, easy and free BitTorrent client"
 PKG_DISCLAIMER="Keep it legal and carry on"
